# CopperBoy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  code_gen.py  code_gen_io.py  code_gen_ops.py  copperboy_libretro.info  disasm.asm  report.py
.cargo/: config
.github/workflows/: build.yaml  test.yaml
arduboy/: Cargo.toml  README.md
arduboy/benches/: benchmark.rs
arduboy/src/: clock.rs  display.rs  eeprom.rs  emulator.rs  int_vec.rs  keys.rs  lib.rs  mcu.rs  opcodes.rs  utils.rs
arduboy/src/core/: test.rs  test_vectors.rs
arduboy/src/emulator/: test.rs
arduboy/src/mcu/: test.rs  test_ops.rs  test_vectors.rs
arduboy/src/opcodes/: test.rs
ci/: Dockerfile  bench.sh  build-bin.sh  build-libretro.sh  docker-build.sh  docker-run.sh  profile.sh  setup.sh  test.sh
example_roms/: HelloWorld.ino.elf  HelloWorld.ino.hex
libretro/: Cargo.toml  README.md  run-bindgen.sh
libretro/src/: lib.rs  libretro_h.rs
libretro_psvita/: Cargo.toml  Xargo.toml  armv7-vita-eabihf.json
libretro_psvita/src/: lib.rs
libretro_std/: Cargo.toml
libretro_std/src/: lib.rs
records/: Action_JunoFirst_JunoFirst.V1.00.hex.txt  Arcade%2FLasers%2F9489704cbaedb8fbfff8986d63eae61bdb0915d5.hex.txt  MYBL_AB_v17.hex.txt  Platformer%2FCastleBoy%2FCastleBoy.hex.txt  Puzzle_tinytris_TinyTris.hex.txt  README.md  SRN_AB_v122.hex.txt  Shooter_StarduinoTurob_game.hex.txt  hollow_v0.31.hex.txt  index.json  replay.sh  unicorn_dash.hex.txt
report/: Cargo.toml
report/src/: main.rs
reports/Action_JunoFirst_JunoFirst.V1.00.hex/: stats.txt
reports/Arcade%2FLasers%2F9489704cbaedb8fbfff8986d63eae61bdb0915d5.hex/: stats.txt
reports/MYBL_AB_v17.hex/: stats.txt
reports/Platformer%2FCastleBoy%2FCastleBoy.hex/: stats.txt
reports/Puzzle_tinytris_TinyTris.hex/: stats.txt
reports/SRN_AB_v122.hex/: stats.txt
reports/Shooter_StarduinoTurob_game.hex/: stats.txt
reports/hollow_v0.31.hex/: stats.txt
reports/unicorn_dash.hex/: stats.txt
sdl/: Cargo.toml  README.md
sdl/src/: main.rs
src/: clock.rs  core.rs  display.rs  emulator.rs  int_vec.rs  io_regs.rs  keypad.rs  lib.rs  opcodes.rs  peripherials.rs  utils.rs
src/core/: test.rs  test_vectors.rs
src/opcodes/: test.rs
stash/: code_gen_ints.py  code_gen_ops.py
test-framework/: Makefile  TestOps.ino  code-gen.py  codegen.py  main.py  ops.h  vectors.tar.xz
test-roms/CastleBoy/: game.ini  replay.ron
test-roms/Mystic-Balloon/: LICENSE  Mystic-Balloon.hex  game.ini
test-vita/: Cargo.toml  NOTES.md
test-vita/src/: main.rs
