[package]
name = "arduboy"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = { version = "0.4", default-features = false }
hex = { git = "https://github.com/KokaKiwi/rust-hex", default-features = false, rev = "a354af249b95c476057baec455314d2fb9f52ffa" }
log = { version = "0.4.8", optional = true, default-features = false }
# env_logger = "0.7.0"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
crunchy = "0.2.2"
# serde_json = { version = "1.0", optional = true }
serde = { version = "1.0.123", default-features = false, features = ["derive", "alloc"] }
postcard = { version= "0.5.2" }
static_assertions = { version = "1.1.0" }
bit_field = "0.9.0"

[features]
default = ["std"]
std = ["hex/std", "postcard/use-std"]
logging = ["log"]
vec_unchecked = []
stats = []
test_vectors = []

[dev-dependencies]
ron = "0.6.4"
pretty_assertions = "0.6.1"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
