[package]
name = "arduboy"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true, default-features = false }
log = { version = "0.4", optional = true, default-features = false }
# env_logger = "0.7.0"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
crunchy = "0.2"
# serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { workspace = true }
static_assertions = { version = "1.1" }

[features]
default = ["std"]
std = ["hex/std", "postcard/use-std"]
logging = ["log"]
vec_unchecked = []
stats = []
test_vectors = []

[dev-dependencies]
ron = { workspace = true }
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
