[package]
name = "libretro"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduboy = { path = "../arduboy" }
env_logger = "0.7.0"

[lib]
name = "retro"
crate-type = ["cdylib"]
