[package]
name = "libretro_psvita"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libretro = { path = "../libretro", default-features  = false}
vitallocator = { path = "/home/dev/git/vitallocator" }
# libretro = { path = "../libretro"}

[lib]
name = "retro_psvita"
crate-type = ["staticlib"]

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
panic_immediate_abort = false
