[package]
name = "libretro_psvita"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libretro = { path = "../libretro", default-features  = false}
# vitallocator = { path = "/home/dev/git/vitallocator" }
vitallocator = { git = "https://github.com/Dhole/vitallocator", rev = "cfd7f8d88a10254ebe9673fb2aa76501f425b68f" }
# libretro = { path = "../libretro"}

[lib]
name = "retro_psvita"
crate-type = ["staticlib"]

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"
panic_immediate_abort = false
