[package]
name = "libretro_std"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libretro = { path = "../libretro", default-features  = false}
libretro = { path = "../libretro"}

[lib]
name = "retro_std"
crate-type = ["cdylib"]
