[package]
name = "report"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduboy = { path = "../arduboy", features = ["std", "vec_unchecked", "stats"]}
hex = "0.3.2"
env_logger = "0.7.0"
clap = "2.33.0"
png = "0.16.8"
# serde_json = { version = "1.0" }
ron = "0.6.4"

# [dependencies.sdl2]
# version = "0.33.0"
# default-features = false
# features = ["ttf"]
