[package]
name = "sdl"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduboy = { path = "../arduboy", features = ["std", "vec_unchecked", "stats"]}
hex = { workspace = true, default-features = true }
env_logger = "0.11.0"
clap = "2.33.0" # TODO: Update
# serde_json = { version = "1.0" }
ron = { workspace = true }
postcard = { workspace = true }
anyhow = { version = "1.0" }

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["ttf"]
